--- a/index.html
+++ b/index.html
@@ -53,23 +53,26 @@ description: >
   <div id="cover">
     <a href="book/chapter-1.html" onmouseover="openBook()" onmouseout="shutBook()"><img id="cover-image" src="images/2007-cover-shut.jpg" /></a>
     <div id="news">
-      Ohh! Fresh chapter snuck up! <strong><a href="book/chapter-7.html">When You Wish Upon a Beard</a></strong>, drawings everywhichway.
+      噢! 新的一章完成了!<br> <strong><a href="book/chapter-7.html">当你的愿望遭到反对</a></strong>,<br> 全部由图画组成.
     </div>
   </div>
 
   <div id="menu">
     <p>
-    <strong><a href="book/chapter-1.html">open the book</a></strong>
+    <strong><a href="book/chapter-1.html">打开本书</a></strong>
     &#0164;
-    <a href="book/">the book??</a>
+    <a href="book/">要看目录??</a>
     &#0164;
-    <a href="soundtrack/">but the soundtrack??!</a>
+    <a href="soundtrack/">还是要听原声音乐??!</a>
     </p>
 
     <p class=vcard>
-    Tenderly written and illustrated by
-    <strong rel=author class=fn>Why the Lucky Stiff</strong>.
+    所有内容和插画出自
+    <strong rel=author class=fn>Why the Lucky Stiff</strong>
+	之手   <br>
+	本版本由<strong rel=author class=fn>codecly259</strong>翻译
     <br>
-    <a href="https://github.com/mislav/poignant-guide">Source on GitHub</a>
+    <a href="https://github.com/mislav/poignant-guide">英文Github地址</a>
+	<a href="https://github.com/codecly259/poignant-guide-cn">中文翻译Github地址</a>
     </p>
   </div>
