--- a/book/index.html
+++ b/book/index.html
@@ -118,7 +118,7 @@ Welcome to the pirate radio of technical manuals.
 
                 <!-- Creative Commons License -->
                 <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/"><img alt="Creative Commons License" src="http://creativecommons.org/images/public/somerights20.gif" /></a><br />
-                This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/">Creative Commons License</a>.
+                This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/">知识共享许可</a>.
                 <!-- /Creative Commons License -->
 
 
