翻译第一章图片的title

--- a/_posts/1900-01-01-about-this-book.html
+++ b/_posts/1900-01-01-about-this-book.html
@@ -4,10 +4,10 @@ permalink: book/chapter-1.html
 layout: chapter
 ---
 
-<p><img src="../images/about.the.poignant.guide-1.gif" title="What a fantastic voyage!" alt="What a fantastic voyage!"></p>
+<p><img src="../images/about.the.poignant.guide-1.gif" title="多么神奇的旅行!" alt="What a fantastic voyage!"></p>
 
-<p><img src="../images/about.the.poignant.guide-2.jpg" title="Small infants can do it." alt="Small infants can do it."></p>
+<p><img src="../images/about.the.poignant.guide-2.jpg" title="婴儿都能做到." alt="Small infants can do it."></p>
 
-<p><img src="../images/about.the.poignant.guide-3.gif" title="The thoughtful reader." alt="The thoughtful reader."></p>
+<p><img src="../images/about.the.poignant.guide-3.gif" title="有思想的读者." alt="The thoughtful reader."></p>
 
 <p><img src="../images/about.the.poignant.guide-4.gif" title="Meep." alt="Meep."></p>
