翻译原声音乐篇

--- a/soundtrack/index.html
+++ b/soundtrack/index.html
@@ -64,31 +64,31 @@
 
 <div id="wrapper">
   <div id="menu">
-    <strong><a href="../">return to the book</a></strong>
+    <strong><a href="../">返回封面</a></strong>
     &#0164;
-    <a href="../book/">the book??</a>
+    <a href="../book/">返回目录??</a>
   </div>
   <div id="stoneborder">
   <div id="stone">
     <img src="../images/soundtrack.png" />
-    <h4>THE SOUNDTRACK TO</h4>
-    <h2>why's (poignant) guide to ruby</h2>
+    <h2>why(感人的)ruby指南</h2>的
+	<h4>原声音乐</h4>
     <hr />
-    <h6>Performed slapdash by The Thirsty Cups</h6>
-    <p>Siphon the MP3s below.  Place them on the wooden applicator wand.  Fill the yellow graduated
+    <h6>由 The Thirsty Cups 草率的执行</h6>
+    <p>聆听下面的mp3音乐。  把他们放到木棒上面.  Fill the yellow graduated
       dish to brimming.  Insert the wand in your most noteworthy ear.  Fasten the red terminal
       clip to your collar.</p>
     <ol>
-      <li><div class="ch">chapter one:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-1-introducing.mp3">Introducing...</a></li>
-      <li><div class="ch">chapter two:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-2-this-book-is-made.mp3">This Book is Made (of Rabbits and Lemonade)</a></li>
-      <li><div class="ch">chapter three:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-3-chunky-bacon.mp3">The Parts of Ruby / Chunky Bacon</a></li>
-      <li><div class="ch">chapter four:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-4-the-magic-elf.mp3">The Magic Elf / Ambrose Caves</a></li>
-      <li><div class="ch">chapter five:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-5-belljar.mp3">Belljar / Space / My Daughter's Organ Instructor</a></li>
-      <li><div class="ch">chapter six:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-6-downtown.mp3">Downtown / Dwemthy</a></li>
-      <li><div class="ch">chapter seven:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-7-wish-upon-a-beard.mp3">When You Wish Upon a Beard</a></li>
-      <li><div class="ch">chapter eight:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-8-heavens-harp.mp3">Heaven's Harp</a></li>
+      <li><div class="ch">第一章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-1-introducing.mp3">引子...</a></li>
+      <li><div class="ch">第二章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-2-this-book-is-made.mp3">这本书是由兔子和柠檬水组成</a></li>
+      <li><div class="ch">第三章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-3-chunky-bacon.mp3">Ruby部分 / 厚实的咸肉</a></li>
+      <li><div class="ch">第四章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-4-the-magic-elf.mp3">魔法小精灵 / Ambrose Caves</a></li>
+      <li><div class="ch">第五章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-5-belljar.mp3">玻璃罩 / 空间 / 我女儿的风琴教练</a></li>
+      <li><div class="ch">第六章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-6-downtown.mp3">市中心 / Dwemthy</a></li>
+      <li><div class="ch">第七章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-7-wish-upon-a-beard.mp3">当你的愿望遭到反对</a></li>
+      <li><div class="ch">第八章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-8-heavens-harp.mp3">天堂之琴</a></li>
     </ol>
-    <p>Download the whole <a href="http://cloud.github.com/downloads/mislav/poignant-guide/soundtrack.zip">soundtrack.zip</a></p>
+    <p>打包下载所有的原声音乐 <a href="http://cloud.github.com/downloads/mislav/poignant-guide/soundtrack.zip">soundtrack.zip</a></p>
     <p>Now, please <a href="../">resume</a>.  All songs are <a href="http://creativecommons.org/licenses/by-sa/2.5/">by-sa 2.5</a> after all.</p>
   </div>
   </div>
