--- a/soundtrack/index.html
+++ b/soundtrack/index.html
@@ -89,7 +89,7 @@
       <li><div class="ch">第八章:</div> <a href="http://s3.amazonaws.com:80/mislav.baconfile.com/poignant-guide%2Fchapter-8-heavens-harp.mp3">天堂之琴</a></li>
     </ol>
     <p>打包下载所有的原声音乐 <a href="http://cloud.github.com/downloads/mislav/poignant-guide/soundtrack.zip">soundtrack.zip</a></p>
-    <p>Now, please <a href="../">resume</a>.  All songs are <a href="http://creativecommons.org/licenses/by-sa/2.5/">by-sa 2.5</a> after all.</p>
+    <p>现在, 请<a href="../">重新开始</a>.  所有的音乐都是通过 <a href="http://creativecommons.org/licenses/by-sa/2.5/">署名-相同方式共享 2.5 通用</a> 协议发表.</p>
   </div>
   </div>
 </div>
