update index.html css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@ description: >
   A programming adventure for Ruby beginners illustrated with cartoon foxes.
 ---
   <style type="text/css">
+  /*绿色#24890d  橘黄色fd5d3c*/
+  ::selection {
+    background:#24890d none repeat scroll 0 0;
+  color:#fff;
+  }
+
+  ::-moz-selection {
+    background:#24890d none repeat scroll 0 0;
+    color:#fff;
+  }
+
+  ::-webkit-selection {
+    background:#24890d none repeat scroll 0 0;
+    color:#fff;
+  }
   body {
     color: white;
     background: url(images/2007-cover-pale.jpg);
