--- a/soundtrack/index.html
+++ b/soundtrack/index.html
@@ -8,7 +8,59 @@
     <link rel="stylesheet" type="text/css" href="../guide.css" />
 </head>
 <body class="chapter">
-
+    <style type="text/css">
+    <!--
+    body {
+      background-color: #555;
+    }
+    #menu { font-size: 12px; color: #900; padding: 8px; }
+    #menu a {
+      color: #009;
+    }
+    #wrapper {
+      text-align: center;
+      width: 580px;
+      margin: 0 auto;
+    }
+    #stoneborder {
+      background: white;
+      border: solid 1px #CCD;
+      padding: 8px;
+      margin: 10px 0 60px 0;
+    }
+    #stone {
+      border: solid 1px #DDF;
+      background: url(../images/soundtrack-spacer.png);
+    }
+    #stone hr {
+      border: none;
+      border-top: solid 1px #BEF;
+      width: 50%;
+      margin-top: 20px;
+    }
+    #stone ol {
+      list-style: none;
+      padding: 0;
+      margin: 20px 0;
+      margin-left: -10px;
+    }
+    #stone ol li {
+      margin: 6px 0;
+      padding: 0;
+    }
+    #stone .ch {
+      font-size: 10px;
+      display: inline;
+      background-color: white;
+    }
+    #stone h2 {
+      font-size: 31px;
+    }
+    #stone p {
+      font-size: 12px;
+    }
+    -->
+    </style>
 <div id="wrapper">
   <div id="menu">
     <strong><a href="../">返回封面</a></strong>
