第三章侧边栏部分翻译

--- a/book/index.html
+++ b/book/index.html
@@ -5,7 +5,7 @@ layout: book
 
   <div id="sidepane">
     <div id="bookplate"><a href="chapter-1.html"><img src="../images/2006.cover.jpg" alt="why's (poignant) guide to ruby" /></a></div>
-    <div id="bookseal"><a href="chapter-1.html"><img src="../images/2006.seal.jpg" alt="Open the book" /></a></div>
+    <div id="bookseal"><a href="chapter-1.html"><img src="../images/2006.seal.jpg" alt="打开本书" /></a></div>
     <div id="bookcontents">
       <h3>~ Contents ~</h3>
       <ol class=toc>
