封面目录翻译

--- a/book/index.html
+++ b/book/index.html
@@ -7,7 +7,7 @@ layout: book
     <div id="bookplate"><a href="chapter-1.html"><img src="../images/2006.cover.jpg" alt="why's (poignant) guide to ruby" /></a></div>
     <div id="bookseal"><a href="chapter-1.html"><img src="../images/2006.seal.jpg" alt="打开本书" /></a></div>
     <div id="bookcontents">
-      <h3>~ Contents ~</h3>
+      <h3>~ 目录 ~</h3>
       <ol class=toc>
         {% for chapter in site.posts reversed %}
         <li>
@@ -35,15 +35,15 @@ layout: book
   <div id="main">
     <div class="foxbox">
       <div class="foxbox_head">
-        <h3>Lost foxes in <a href="chapter-6.html">Chapter 6. Downtown.</a>
-          Such juicy metaprogramming and class design!</h3>
+        <h3>狐狸在 <a href="chapter-6.html">第六章. 市中心. </a>迷路了  &nbsp;&nbsp;
+          如此生动的元编程和类设计!</h3>
       </div>
 
       <div class="foxbox_body">
-        <p><b>T-Shirts</b>:
-          <a href="http://www.cafeshops.com/blixytees.10117492">"Addiction is Like Pokemon..."</a>,
-          <a href="http://www.cafeshops.com/blixytees.10116504">"Chunky. Bacon."</a>, and
-          <a href="http://www.cafeshops.com/blixytees">others</a>.
+        <p><b>T恤</b>:
+          <a href="http://www.cafeshops.com/blixytees.10117492">"像宠物小精灵一样让人上瘾..."</a>,
+          <a href="http://www.cafeshops.com/blixytees.10116504">"厚实的咸肉"</a>, 和
+          <a href="http://www.cafeshops.com/blixytees">其他</a>.
         </p>
         <p><br></p>
       </div>
@@ -54,55 +54,49 @@ layout: book
     <br />
 
 {% capture intro %}
-## Read This Paragraph
+## 读读这一段
 
-At my local Barnes and Noble, there is a huge wall of Java books just waiting to
-tip over and crush me one day. And one day it will. At the rate things are
-going, one day that bookcase will be tall enough to crush us all. It might even
-loop the world several times, crushing previous editions of the same Java books
-over and over again.
+在我当地的Barnes和Noble，有一大堆如墙似的Java书籍，正等着有一天翻到过来压倒我。
+按照这样的增长速度，总有一天书柜会高到足以压倒我们所有人。把所有一版又一版的相同的
+Java书籍推起来，甚至可以绕地球好几圈。
 
-## And This Paragraph Too
+## 还有这一段
 
-This is just a small Ruby book. It won’t crush you. It’s light as a feather
-(because I haven’t finished it yet—hehe). And there’s a reason this book will
-stay light: because Ruby is simple to learn.
+这只是一个小小的Ruby书籍。它不会压倒你。它轻如鸿毛（因为我还没有写完，呵呵）。
+而且这本书有一个使它这么轻薄的理由：因为Ruby简单易学。
 
-## But Don't Read This One!
+## 但是不要读这一段
 
-_Why’s (Poignant) Guide to Ruby_ is released under the
-[Attribution-ShareAlike][1] License. So, yes, please distribute it and print it
-and read it leisurely in your housecoat. In fact, there will be a contest at the
-end of the book for Best Housecoat. It’s a coveted award and you should feel
-honored to even read about it! (Especially if you are reading about it in your
-soon-to-be-prize-winning housecoat.)
+*Why先生（辛酸的）Ruby指南*是通过[署名-相同方式共享][1]许可发布的。所以，是的，
+请穿着你的家常服分发并打印出来读它吧。事实上，在本书的最后将会有一个最佳家常服比赛。
+这是一个令人垂涎欲滴的奖项，你甚至应该为能够读到它而感到荣幸！（特别是当你穿着
+即将获得奖项的家常服读它的时候。）
 
-## Now Back to Your Regularly Scheduled Paragraph
+## 现在回到你的定期计划段落
 
-I’ll try not to feel utterly rejected if this book doesn’t capture your fancy. I
-might experience a few long days of emptiness, accompanied with profuse weeping,
-but other than that I’ll be fine. It’s at least comforting to know that the
-following fine texts cover my topic and will doubtless fill you with Ruby lust:
+如果这本书没有俘获你的芳心，我将尝试着感觉没有完全被拒绝。我可能会空虚好一些日子，
+伴随着嚎啕大哭，但除此之外我不会有事的。知道用以下优美的文字来代表我的主题，至少能够
+让我感到安慰，而且这无疑会填补你对Ruby的强烈欲望：
 
-*   [Learning to Program][2]
+*   [学习编程(Learning to Program)][2]
 
-    * A very basic, ground-level tutorial for the beginner to Ruby. By Chris Pine.
+    * 对Ruby初学者的非常基本的初级教程。 —— Chris Pine.
 
-*   [Programming Ruby][3]
+*   [Ruby程序设计(Programming Ruby)][3]
 
-    * The original tome and complete reference for Ruby. By Dave Thomas and Andy Hunt (also known as _The Pickaxe_)
+    * Ruby完全参考手册. —— Dave Thomas 和Andy Hunt (也称作_镐头书_)
 
-*   [Ruby User’s Guide][4]
+*   [Ruby用户指南(Ruby User’s Guide)][4]
 
-    * A guide to learning Ruby (with code examples). By Matz, the creator of Ruby. Translated into English.
+    * 一个学习Ruby的指南手册，带有代码例子。—— Matz，Ruby的创造者 ，英文版.
 
-*   [Ruby-Lang.org][5]
+*   [Ruby官方网站][5]
 
-    * The official home page for the Ruby language.
+    * Ruby语言的官方主页。
 
-Now, if you can’t seem to find the contents link on the left-hand side of the page, then here’s a link to the [first page][6] of the (Poignant) Guide.
+现在，如果你你找不到左侧目录的链接页面，那么这里是到达这本（辛酸的）指南[第一页][6]的链接。
 
-Welcome to the pirate radio of technical manuals.
+欢迎来到技术手册的盗版电台。
 
 
 [1]: http://creativecommons.org/licenses/by-sa/2.5/
@@ -118,7 +112,7 @@ Welcome to the pirate radio of technical manuals.
 
                 <!-- Creative Commons License -->
                 <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/"><img alt="Creative Commons License" src="http://creativecommons.org/images/public/somerights20.gif" /></a><br />
-                This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/">知识共享许可</a>.
+                这项工作室根据<a rel="license" href="http://creativecommons.org/licenses/by-sa/2.5/">知识共享许可</a>.
                 <!-- /Creative Commons License -->
 
 
