封面目录修改

--- a/book/index.html
+++ b/book/index.html
@@ -75,7 +75,7 @@ Java书籍推起来，甚至可以绕地球好几圈。
 ## 现在回到你的定期计划段落
 
 如果这本书没有俘获你的芳心，我将尝试着感觉没有完全被拒绝。我可能会空虚好一些日子，
-伴随着嚎啕大哭，但除此之外我不会有事的。知道用以下优美的文字来代表我的主题，至少能够
+伴随着嚎啕大哭，但除此之外我不会有事的。知道用以下优良的书本来代替我的主题，至少能够
 让我感到安慰，而且这无疑会填补你对Ruby的强烈欲望：
 
 *   [学习编程(Learning to Program)][2]
